<resources>
    <string name="app_name">iMicMo2</string>
    <string name="Videos">CLIP ONLINE</string>
    <string name="Job_Recruitments">TÌM KIẾM VIỆC LÀM</string>
    <string name="Opening_Scheduler">LỊCH KHAI GIẢNG</string>
    <string name="Introduction">GIỚI THIỆU</string>
    <string name="Account">BẢN THÂN</string>
    <string name="noi_lam_viec">Nơi làm việc:</string>
    <string name="nganh_nghe">Ngành Nghề:</string>
    <string name="loai_cv">Loại công việc:</string>
    <string name="tim_kiem_cv">TÌM KIẾM</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="skip">Bỏ qua</string>
    <string name="da_ung_tuyen">DANH SÁCH ĐÃ GỬI CV</string>
    <string name="Developers">Nhà phát triển</string>
    <string name="Subbmit">Nộp hồ sơ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="don_t_have_an_account">Chưa có tài khoản?</string>
    <string name="register_here">ĐĂNG KÝ</string>
    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="Mobile">Mobile</string>

    <string name="Introduces_Title">Giới thiệu về IMIC Technology</string>
    <string name="Introduces_Contents"><![CDATA[<p><strong><em>IMicroSoft - IMIC được ra đời vào tháng 07 năm 2011</em></strong>
        trong lúc sự phát triển và bùng nổ Công nghệ và Truyền thông tại Việt Nam.<strong><em>Ra đời với Sứ mệnh Đào Tạo Nguồn Nhân Lực có chuyên môn cao và các sản phẩm Phần Mềm hỗ trợ công tác Quản lý</em></strong>
        cho Khách hàng với chi phí thấp mà hiệu quả lại cao.
        IMIC đã lựa chọn cho mình hướng mục tiêu phát triển là Đạo tạo ra nguồn nhân sự có chuyên môn cao về CNTT/CNPM đáp ứng nhu cầu nhân sự tại IMIC cũng như các đối tác tuyển dụng của IMIC và nhân sự cũng chính
        là trung tâm cho sự phát triển mạnh lĩnh vực phát triển, gia công phần mềm. Năm 2011 cũng là năm thương hiệu IMIC chính thức được ra đời.</p>]]>

        <![CDATA[<p><br><strong>SỨ MỆNH:</strong> Chúng tôi tạo ra và kết nối thế hệ những Lập trình viên trẻ tài năng, nhiệt huyết, cùng họ mang đến một thế giới tốt đẹp hơn bằng sức mạnh của Công nghệ hiện đại.
        Chúng tôi tin rằng, những người lãnh đạo công nghệ trong tương lai ấy cần có không chỉ là khả năng chuyên môn xuất sắc,
mà còn là ngoại ngữ, kỹ năng mềm, tầm nhìn toàn cầu và tinh thần khởi nghiệp. Với Chương trình Đào Tạo toàn diện, thực tế, khác biệt,
với sức mạnh của cộng đồng, chúng tôi khao khát không chỉ thay đổi tương lai Việt Nam, các nước ASEAN, mà còn dịch chuyển cả thế giới này.</p>]]>

        <![CDATA[<p><br><strong>TẦM NHÌN:</strong> Trở thành một trong các tổ chức giáo dục lớn nhất ở Việt Nam và ASEAN trong lĩnh vực công nghệ thông tin - công nghệ phần mềm,
        cung cấp cho học viên và cộng đồng những trải nghiệm giáo dục tốt nhất trong khu vực, nâng tầm trình độ nhân lực của đất nước. Cùng với cộng đồng về Kinh doanh
         – Kinh tế hàng nghìn thành viên ưu tú nhất đến từ các trường ĐH, công ty, dự án danh giá nhất trên thế giới IMIC góp phần vào sự phát triển của nền kinh tế tri thức và tương lai của Việt Nam.</p>]]>
    </string>

    <string name="title_activity_detail_openscheduler">DetailOpenschedulerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
