<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_introduce"></FrameLayout>
    <FrameLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:background="@drawable/shape_login">
        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:scaleType="center"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/user">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/user_Txt"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password">
                <EditText
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/pass_Txt"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/dang_nhap_Btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:text="@string/dang_nhap"/>
                <Button
                    android:id="@+id/dang_ky_Btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:text="@string/dang_ky"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>