<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin= "5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/noi_lam_viec"/>
            <Spinner
                android:id="@+id/noi_lam_viec_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/nganh_nghe"/>
            <Spinner
                android:id="@+id/nganh_nghe_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/loai_cv"/>
            <Spinner
                android:id="@+id/loai_cv_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:gravity="center">
        <TextView
            android:id="@+id/find_Btn"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@drawable/shape_button"
            android:gravity="center"
            android:text="@string/tim_kiem_cv"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ProgressBar
            android:visibility="visible"
            android:id="@+id/loading"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/cong_viec_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:layout_margin="10dp"
            android:visibility="invisible"></ListView>
    </FrameLayout>

</LinearLayout>