<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fade">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_register"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <FrameLayout
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/imic_technology"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:tooltipText="Mời nhập user"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/user"/>
                <EditText
                    android:id="@+id/user_register"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:textColor="@android:color/white"
                    android:padding="5dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:tooltipText="Mời nhập password"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:text="@string/password"
                    android:textColor="@android:color/white"
                    android:padding="10dp"/>
                <EditText
                    android:id="@+id/pass_register"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:textColor="@android:color/white"
                    android:padding="5dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:tooltipText="Mời nhập email"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/email" />
                <EditText
                    android:id="@+id/email_register"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:textColor="@android:color/white"
                    android:padding="5dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/fullname" />
                <EditText
                    android:id="@+id/fullname_register"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:background="@drawable/border"
                    android:padding="5dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:textColor="@android:color/white"
                    android:text="@string/Mobile"
                    android:padding="10dp"/>
                <EditText
                    android:id="@+id/mobile_register"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:background="@drawable/border"
                    android:padding="5dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:layout_gravity="center"
            android:padding="5dp">
            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:background="@color/button_shadow"
                android:textSize="17dp" />
        </FrameLayout>
    </LinearLayout>

</FrameLayout>